@@ -1,3 +1,8 @@
+Tue Sep 27 12:31:08 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>
+
+	* intervm.c (wormhole_interpret_this_obj): This function had some
+	  memory leaks.
+
 Mon Sep 26 18:56:30 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>
 
 	* intervm.c (rb_intervm_wormhole_get_bytes): Add statistics for
